@@ -20,6 +20,7 @@ import static org.mockito.Mockito.*;
 
 import io.micrometer.core.instrument.Tags;
 import jakarta.servlet.http.HttpServletResponse;
+import java.net.URI;
 import java.net.URL;
 import java.util.Date;
 import java.util.Map;
@@ -38,33 +39,35 @@ public class HttpIndexFetcherTest {
   @Test
   void testFetchUsesIfModifiedSince() throws Exception {
 
-    try (TestHttpServer s = new TestHttpServer()) {
-      String etag = "123";
-      String since = new Date().toString();
+    String etag = "123";
+    String since = new Date().toString();
 
-      s.get(
-          "/registry/index.json",
-          ctx -> {
-            Map<String, String> headers = ctx.headerMap();
-            String etagHeader = headers.get(ValidationConstants.HTTPHEADER_E_TAG);
-            String sinceHeader = headers.get(ValidationConstants.HTTPHEADER_IF_MODIFIED_SINCE);
+    try (TestHttpServer s =
+        new TestHttpServer(
+            config ->
+                config.routes.get(
+                    "/registry/index.json",
+                    ctx -> {
+                      Map<String, String> headers = ctx.headerMap();
+                      String etagHeader = headers.get(ValidationConstants.HTTPHEADER_E_TAG);
+                      String sinceHeader =
+                          headers.get(ValidationConstants.HTTPHEADER_IF_MODIFIED_SINCE);
 
-            if (etag.equals(etagHeader) && since.equals(sinceHeader)) {
-              ctx.res().setStatus(304);
-            } else {
-              HttpServletResponse res = ctx.res();
-              res.setStatus(200);
-              res.getOutputStream()
-                  .write(
-                      ("\n"
-                              + "{\"schemes\":[{\"id\":\"namespaceA/eventA/1/schema.json\",\"ns\":\"namespaceA\",\"type\":\"eventA\",\"version\":1,\"hash\":\"84e69a2d3e3d195abb986aad22b95ffd\"},{\"id\":\"namespaceA/eventA/2/schema.json\",\"ns\":\"namespaceA\",\"type\":\"eventA\",\"version\":2,\"hash\":\"24d48268356e3cb7ac2f148850e4aac1\"}]}")
-                          .getBytes());
-              res.addHeader(ValidationConstants.HTTPHEADER_E_TAG, etag);
-              res.addHeader(ValidationConstants.HTTPHEADER_LAST_MODIFIED, since);
-            }
-          });
-
-      URL baseUrl = new URL("http://localhost:" + s.port() + "/registry");
+                      if (etag.equals(etagHeader) && since.equals(sinceHeader)) {
+                        ctx.res().setStatus(304);
+                      } else {
+                        HttpServletResponse res = ctx.res();
+                        res.setStatus(200);
+                        res.getOutputStream()
+                            .write(
+                                ("\n"
+                                        + "{\"schemes\":[{\"id\":\"namespaceA/eventA/1/schema.json\",\"ns\":\"namespaceA\",\"type\":\"eventA\",\"version\":1,\"hash\":\"84e69a2d3e3d195abb986aad22b95ffd\"},{\"id\":\"namespaceA/eventA/2/schema.json\",\"ns\":\"namespaceA\",\"type\":\"eventA\",\"version\":2,\"hash\":\"24d48268356e3cb7ac2f148850e4aac1\"}]}")
+                                    .getBytes());
+                        res.addHeader(ValidationConstants.HTTPHEADER_E_TAG, etag);
+                        res.addHeader(ValidationConstants.HTTPHEADER_LAST_MODIFIED, since);
+                      }
+                    }))) {
+      URL baseUrl = URI.create("http://localhost:" + s.port() + "/registry").toURL();
       uut = new HttpIndexFetcher(baseUrl, new NOPRegistryMetrics());
       assertTrue(uut.fetchIndex().isPresent());
       assertFalse(uut.fetchIndex().isPresent());
@@ -74,13 +77,12 @@ public class HttpIndexFetcherTest {
 
   @Test
   void testThrowsExceptionOn404() throws Exception {
-    try (TestHttpServer s = new TestHttpServer()) {
+    var registryMetrics = mock(RegistryMetrics.class);
 
-      s.get("/registry/index.json", ctx -> ctx.res().setStatus(404));
-
-      var registryMetrics = mock(RegistryMetrics.class);
-
-      URL baseUrl = new URL("http://localhost:" + s.port() + "/registry");
+    try (TestHttpServer s =
+        new TestHttpServer(
+            config -> config.routes.get("/registry/index.json", ctx -> ctx.res().setStatus(404)))) {
+      URL baseUrl = URI.create("http://localhost:" + s.port() + "/registry").toURL();
       uut = new HttpIndexFetcher(baseUrl, registryMetrics);
 
       assertThrows(SchemaRegistryUnavailableException.class, () -> uut.fetchIndex());
@@ -100,7 +102,9 @@ public class HttpIndexFetcherTest {
     OkHttpClient client = mock(OkHttpClient.class);
     when(client.newCall(any())).thenReturn(call);
 
-    uut = new HttpIndexFetcher(new URL("http://ibm.com"), client, mock(RegistryMetrics.class));
+    uut =
+        new HttpIndexFetcher(
+            URI.create("http://ibm.com").toURL(), client, mock(RegistryMetrics.class));
 
     Request request = new Request.Builder().url("http://ibm.com").get().build();
     Response fail =
